--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "angular-ui-router": "^0.2.13",
     "bootstrap": "^3.3.2",
     "jquery": "^2.1.3",
-    "angular-resource": "^1.3.14"
+    "angular-resource": "^1.3.14",
+    "q": "^1.2.0"
   }
 }
