--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bootstrap": "^3.3.2",
     "jquery": "^2.1.3",
     "angular-resource": "^1.3.14",
-    "q": "^1.2.0"
+    "q": "^1.2.0",
+    "underscore": "^1.8.2"
   }
 }
